--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^5.4.0",
     "axios": "^1.7.3",
     "copy-text-to-clipboard": "^3.2.0",
     "html-to-text": "^9.0.5",
